<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        custom:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <se.umu.bio17dkg.sudokusolver.BoardView
        android:id="@+id/sudoku_board"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        custom:numberColor="@color/black"
        custom:numberColorError="@color/red"
        custom:boardColor="@color/black"
        custom:cellNeighbourColor="@color/grey_200"
        custom:cellSelectColor="@color/purple_200" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/number_1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/number_2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/number_3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/number_4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/number_5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/number_6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/six"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/number_7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/number_8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/number_9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textColor="@color/black" />

    </LinearLayout>


    <ImageView
        android:id="@+id/sudoku_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:scaleType="fitXY"
        android:contentDescription="@string/sudoku_preview" />



</LinearLayout>